Agent.csproj: Add IPAddressRange reference

--- a/agent.csproj
+++ b/agent.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="IPAddressRange" Version="6.1.0" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(RuntimeIdentifier)' == 'win-x64'">
