workflows: create dir

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Write public key
-      run: 'echo $PUBLIC_CERT > keys/public.key'
+      run: 'mkdir -p keys && echo $PUBLIC_CERT > keys/public.key'
       shell: bash
       env:
         PUBLIC_CERT: ${{secrets.PUBLIC_CERT}}
