--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET
 
 on:
@@ -11,21 +8,33 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
+    
     - name: Write public key
       run: 'mkdir -p keys && echo $PUBLIC_CERT > keys/public.key'
       shell: bash
       env:
         PUBLIC_CERT: ${{secrets.PUBLIC_CERT}}
+        
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+        
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
+      
+    - name: Build for Linux x64
+      run: dotnet publish -c Release -r linux-x64 --self-contained true -p:PublishSingleFile=true -o publish/linux
+      
+    - name: Build for Windows x64
+      run: dotnet publish -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true -o publish/windows
+  
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      with:
+        files: |
+          publish/linux
+          publish/windows
