--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,12 +31,16 @@ jobs:
       
     - name: Build for Windows x64
       run: dotnet publish -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true -o publish/windows
+
+    - name: Prepare release
+      id: release
+      run: echo "shortsha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
   
     - name: Release
       uses: softprops/action-gh-release@v2
       with:
-        tag_name: ${{ github.ref }}
+        tag_name: ${{ steps.release.outputs.shortsha }}
         token: ${{ secrets.TOKEN }}
         files: |
-           ${GITHUB_WORKSPACE}/publish/linux
-           ${GITHUB_WORKSPACE}/publish/windows
+           ${github.workspace}/publish/linux/
+           ${github.workspace}/publish/windows/
