--- a/agent.csproj
+++ b/agent.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BouncyCastle.Cryptography" Version="2.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="IPAddressRange" Version="6.1.0" />
     <EmbeddedResource Include="keys/**/*.*" />
